[improved-docs] Fixed overflow with toast message

--- a/src/helpers/TimelineToast/generateTimelineToastStyles.module.css
+++ b/src/helpers/TimelineToast/generateTimelineToastStyles.module.css
@@ -44,17 +44,19 @@
 }
 
 .toast_message {
+    display: flex;
     font-size: 1.05em;
     text-indent: .5em;
     font-weight: 500;
-    text-align: start;
     width: max-content;
     height: max-content;
+    max-width: 100%;
     scrollbar-width: thin;
     padding-left: .5em;
     padding-right: .5em;
     margin-top: .5em;
     padding-bottom: 1em;
+    flex-wrap: wrap;
 }
 
 .toast_link_error {
